# DetectLogoPsCoca

./: DetectionLogo.odt  README.md  connect.py  detection_logo_type.py  load_model.py  pyproject.toml
DetectionLogotype/: DetectionLogo.odt  detection_logo_type.py
variables/: variables.index
